--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.54.0",
     "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "video.js": "^8.21.0",
     "zod": "^3.24.1"
