--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "video.js": "^8.21.0",
+    "videojs-flvjs": "^0.3.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
