feat: implemented channel page

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 VITE_ENV=development
 VITE_BE_API_URL=http://127.0.0.1:8787/api
 VITE_WS_STREAM_URL=ws://localhost:8787/ws/stream_live
+VITE_WS_NOTIFICATION_URL=ws://localhost:8787/ws/notification
