--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # for dev env, create .env.local and copy below
 VITE_ENV=development
-VITE_BE_API_URL=http://127.0.0.1:8787/api
+VITE_BE_API_URL=http://localhost:8787/api
 VITE_WS_STREAM_URL=ws://localhost:8787/ws/stream_live
 VITE_WS_NOTIFICATION_URL=ws://localhost:8787/ws/notification
